--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ autom4te.cache/
 !/build-aux/ax_subst_man_date.m4
 !/build-aux/ax_transformed_package_name.m4
 !/build-aux/git-version-gen
+!/build-aux/workspace_status.sh
 bzip3.pc
 
 examples/hl-api
