--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3,10 +3,8 @@ load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
 genrule(
     name = "version_header",
     outs = ["version.h"],
-    cmd = select({
-        "@platforms//os:windows": "powershell -Command \"(Get-Content bazel-out/stable-status.txt | Select-String 'STABLE_BUILD_GIT_DESCRIBE' | ForEach-Object { $$_ .Line -replace 'STABLE_BUILD_GIT_DESCRIBE ', '#define VERSION \\\"' }) + '\\\"' | Out-File -Encoding ASCII $@\"",
-        "//conditions:default": "grep '^STABLE_BUILD_GIT_DESCRIBE ' bazel-out/stable-status.txt | sed 's/STABLE_BUILD_GIT_DESCRIBE /#define VERSION \"/g' | sed 's/$$/\"/' > $@",
-    }),
+    cmd = "grep '^STABLE_BUILD_GIT_DESCRIBE ' bazel-out/stable-status.txt | sed 's/STABLE_BUILD_GIT_DESCRIBE /#define VERSION \"/g' | sed 's/$$/\"/' > $@",
+    cmd_ps = "powershell -Command \"(Get-Content bazel-out/stable-status.txt | Select-String 'STABLE_BUILD_GIT_DESCRIBE' | ForEach-Object { $$_ .Line -replace 'STABLE_BUILD_GIT_DESCRIBE ', '#define VERSION \\\"' }) + '\\\"' | Out-File -Encoding ASCII $@\"",
     stamp = True,
 )
 
