--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3,8 +3,25 @@ load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
 genrule(
     name = "version_header",
     outs = ["version.h"],
-    cmd_bash = "sed -n 's/STABLE_BUILD_GIT_DESCRIBE /#define VERSION \"/p' bazel-out/stable-status.txt | sed 's/$$/\"/' > $@",
+    cmd = "grep '^STABLE_BUILD_GIT_DESCRIBE ' bazel-out/stable-status.txt | sed 's/STABLE_BUILD_GIT_DESCRIBE /#define VERSION \"/g' | sed 's/$$/\"/' > $@",
+    cmd_ps = "$$content = Get-Content bazel-out/stable-status.txt | Select-String '^STABLE_BUILD_GIT_DESCRIBE ' | ForEach-Object { $$_.Line -replace '^STABLE_BUILD_GIT_DESCRIBE (.+)', '#define VERSION \"$$1\"' }; $$content | Out-File -Encoding ASCII -NoNewline $@",
     stamp = True,
+)
+
+config_setting(
+    name = "clang-cl",
+    flag_values = {
+        "@bazel_tools//tools/cpp:compiler": "clang-cl",
+    },
+    visibility = ["//visibility:public"],
+)
+
+config_setting(
+    name = "msvc",
+    flag_values = {
+        "@bazel_tools//tools/cpp:compiler": "msvc-cl",
+    },
+    visibility = ["//visibility:public"],
 )
 
 config_setting(
@@ -27,13 +44,38 @@ config_setting(
     values = {"define": "enable_static_exe=1"},
 )
 
+C_OPTIONS = select({
+    ":msvc": [],
+    ":clang-cl": [
+        "/W4",
+        "-Wconversion",
+        "-Wlong-long",
+        "-Wmissing-declarations",
+        "-Wmissing-prototypes",
+        "-Wno-strict-aliasing",
+        "-Wshadow",
+        "-Wsign-compare",
+        "-Wno-sign-conversion",
+    ],
+    "//conditions:default": [
+        "--pedantic-errors",
+        "-Wall",
+        "-Wconversion",
+        "-Wextra",
+        "-Wlong-long",
+        "-Wmissing-declarations",
+        "-Wmissing-prototypes",
+        "-Wno-strict-aliasing",
+        "-Wshadow",
+        "-Wsign-compare",
+    ],
+})
+
 cc_library(
     name = "bz3",
     srcs = ["src/libbz3.c"],
     hdrs = glob(["include/*.h"]) + [":version_header"],
-    copts = [
-        "-std=c99",
-    ] + select({
+    copts = C_OPTIONS + select({
         ":enable_arch_native": [
             "-march=native",
             "-mtune=native",
@@ -54,6 +96,13 @@ cc_library(
 cc_binary(
     name = "bzip3",
     srcs = ["src/main.c"],
+    copts = C_OPTIONS + select({
+        ":enable_arch_native": [
+            "-march=native",
+            "-mtune=native",
+        ],
+        "//conditions:default": [],
+    }),
     linkstatic = select({
         ":enable_static_exe": True,
         "//conditions:default": False,
